"dead loop detected" assert failure with patch from 8223051

XMLWordPrintable

    • b21

         23 ConI === 0 [[ 1456 24 1019 49 1315 1074 1068 1056 1044 163 176 189 641 1013 1001 989 1050 995 1007 1062 ]] #int:1
         1456 AddI === _ 1456 23 [[ 1494 1457 1456 ]] !orig=[1455] !jvms: Test::test @ bci:223
        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/phaseX.cpp:923
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/home/roland/jdk-jdk/src/hotspot/share/opto/phaseX.cpp:923), pid=3372950, tid=3372964
        # assert(no_dead_loop) failed: dead loop detected
        #
        # JRE version: OpenJDK Runtime Environment (16.0) (fastdebug build 16-internal+0-adhoc.roland.jdk-jdk)
        # Java VM: OpenJDK 64-Bit Server VM (fastdebug 16-internal+0-adhoc.roland.jdk-jdk, compiled mode, sharing, compressed oops, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x1506180] PhaseGVN::dead_loop_check(Node*)+0x160
        #
        # Core dump will be written. Default location: Core dumps may be processed with "/usr/lib/systemd/systemd-coredump %P %u %g %s %t %c %h" (or dumping to /home/roland/tmp/tmp/JTwork/scratch/0/core.3372950)
        #

        when running compiler/c2/TestDeadDataLoopIGVN.java with -server -Xcomp -XX:+CreateCoredumpOnCrash -ea -esa -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -server -XX:-TieredCompilation and the patch from 8223051

              Assignee:
              Roland Westrelin
              Reporter:
              Roland Westrelin
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: