8254734: "dead loop detected" assert failure with patch from 8223051

Reviewed-by: chagedorn, kvn